chainlit ui authentification updated + README updated

--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,7 @@ PDFLoader=MarkerLoader
 # Audio
 WHISPER_MODEL=base
 
-# To enable HTTP authentication via HTTPBearer
+# To enable API HTTP authentication via HTTPBearer
 AUTH_TOKEN=sk-ragdondin-1234
 
 # set to true if you only want to deploy the search and indexer api
@@ -68,13 +68,15 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 # RAY_DASHBOARD_PORT=8265
 # RAY_ADDRESS=ray://X.X.X.X:10001
 
+# # Chainlit UI authentication
+# CHAINLIT_AUTH_SECRET=... # has to be generated with with this command: 'uv run chainlit create-secret' but a random value works too.
+# CHAINLIT_USERNAME=Ragondin
+# CHAINLIT_PASSWORD=Ragondin2025
 
-# # For chainlit data persistency
+# # For chainlit data (chat history, etc) persistency
 # ## Persistency services (localstack + AWS (Deployed Locally))
 # CHAINLIT_DATALAYER_COMPOSE=extern/chainlit-datalayer/compose.yaml
 
-# ## Secret key for Chainlit authentication
-# CHAINLIT_AUTH_SECRET=... # has to be generated with with this command: 'uv run chainlit create-secret'
 
 # ## PostgreSQL instance for data persistency.
 # POSTGRES_USER=root
