--- a/extern/infinity.yaml
+++ b/extern/infinity.yaml
@@ -6,7 +6,7 @@ x-reranker: &reranker_template
   volumes:
     - ${VLLM_CACHE:-/root/.cache/huggingface}:/app/.cache/huggingface # Model weights for RAG
   ports:
-    - ${RERANKER_PORT:-7997}:${RERANKER_PORT:-7997}
+    - ${RERANKER_PORT:-7997}:7997
 
 services:
   reranker:
