added logs volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,11 @@ x-ragondin: &ragondin_template
     - ${MODEL_WEIGHTS_VOLUME:-~/.cache/huggingface}:/app/model_weights # Model weights for RAG
     - ./ragondin:/app/ragondin # For dev mode
     - ${DB_VOLUME:-./db}:/app/db
+    - /$SHARED_ENV:/ray_mount/.env # Shared environment variables
+    - /ray_mount/logs:/app/logs
   ports:
     - ${APP_PORT:-8080}:${APP_iPORT:-8080}
-    - ${RAY_DASHBOARD_PORT:-8265}:8265 # for ray dashboard
+    - ${RAY_DASHBOARD_PORT:-8265}:8265 # Disable when in cluster mode
   networks:
     default:
       aliases:
