env var option to save uploaded files or not

--- a/.env.example
+++ b/.env.example
@@ -54,8 +54,8 @@ WHISPER_MODEL=base
 # To enable API HTTP authentication via HTTPBearer
 AUTH_TOKEN=sk-ragondin-1234
 
-# set to true if you only want to deploy the search and indexer api
-ONLY_SEARCH_AND_INDEXER_API=false
+# set to true if you want to deploy chainlit ui
+WITH_CHAINLIT_UI=true
 
 # Ray
 RAY_DEDUP_LOGS=0
@@ -66,6 +66,9 @@ RAY_POOL_SIZE=1 # Number of serializer actor instances
 RAY_MAX_TASKS_PER_WORKER=5 # Number of tasks per serializer instance
 RAY_DASHBOARD_PORT=8265
 RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
+
+# SAVE UPLOADED FILES
+SAVE_UPLOADED_FILES=true # usefull for chainlit source viewing
 
 ## Specific to Ray cluster
 # SHARED_ENV=/ray_mount/.env
