--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "hdbscan>=0.8.40",
     "umap-learn>=0.5.7",
     "eml-parser>=2.0.0",
+    "psutil>=7.0.0",
 ]
 
 [dependency-groups]
