--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ x-ragondin: &ragondin_template
     - /ray_mount/logs:/app/logs
   ports:
     - ${APP_PORT:-8080}:${APP_iPORT:-8080}
-    - ${RAY_DASHBOARD_PORT:-8265}:8265 # Disable when in cluster mode
+    # - ${RAY_DASHBOARD_PORT:-8265}:8265 # Disable when in cluster mode
   networks:
     default:
       aliases:
@@ -40,8 +40,7 @@ x-vllm: &vllm_template
   volumes:
     - ${VLLM_CACHE:-/root/.cache/huggingface}:/root/.cache/huggingface # put ./vllm_cache if you want to have the weights on the vllm_cache folder in your project
   command: >
-    --model ${EMBEDDER_MODEL_NAME:-jinaai/jina-embeddings-v3}
-    --trust-remote-code
+    --model ${EMBEDDER_MODEL_NAME:-jinaai/jina-embeddings-v3} --trust-remote-code
   ports:
     - ${VLLM_PORT:-8000}:8000
 
@@ -75,8 +74,8 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all 
-              capabilities: [gpu]
+              count: all
+              capabilities: [ gpu ]
     profiles:
       - '' # Empty string gives default behavior (but does not run when cpu requested)
 
