--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,6 @@ VLM_SEMAPHORE=10
 
 # App
 APP_PORT=8080 # this is the forwarded port
-APP_HOST=0.0.0.0
 
 # Vector db VDB Milvus
 VDB_HOST=milvus
@@ -69,6 +68,15 @@ RAY_RUNTIME_ENV_HOOK=ray._private.runtime_env.uv_runtime_env_hook.hook
 
 # SAVE UPLOADED FILES
 SAVE_UPLOADED_FILES=true # usefull for chainlit source viewing
+
+
+## Variable to add to activate indexer-ui
+# INDEXERUI_COMPOSE_FILE=extern/indexer-ui/docker-compose.yaml  # Required path to the docker-compose file
+# INDEXERUI_PORT=8067                                             # Port to expose the Indexer UI (default is 3042)
+# INDEXERUI_URL='http://X.X.X.X:INDEXERUI_PORT'                   # Base URL of the Indexer UI (required to prevent CORS issues)
+# VITE_API_BASE_URL='http://X.X.X.X:APP_PORT'                     # Base URL of your FastAPI backend. Used by the frondend
+
+
 
 ## Specific to Ray cluster
 # SHARED_ENV=/ray_mount/.env
