.env.exemple changed

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,18 @@ VLM_API_KEY=
 VLM_MODEL=
 VLM_SEMAPHORE=10
 
+# LLM for benchmark purpose, using LLM to judge the output
+# You can use the same endpoint as the one used for RAGondin
+JUDGE_BASE_URL=
+JUDGE_MODEL=
+JUDGE_API_KEY=
+
 # App
+APP_URL=localhost
 APP_PORT=8080 # this is the forwarded port
+
+# VLLM
+VLLM_PORT=8007
 
 # Vector db VDB Milvus
 VDB_HOST=milvus
