--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,27 +66,27 @@ services:
     profiles:
       - 'cpu'
 
-  # vllm-gpu:
-  #   <<: *vllm_template
-  #   image: vllm/vllm-openai:latest
-  #   runtime: nvidia
-  #   deploy:
-  #     resources:
-  #       reservations:
-  #         devices:
-  #           - driver: nvidia
-  #             count: all 
-  #             capabilities: [gpu]
-  #   profiles:
-  #     - '' # Empty string gives default behavior (but does not run when cpu requested)
+  vllm-gpu:
+    <<: *vllm_template
+    image: vllm/vllm-openai:latest
+    runtime: nvidia
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all 
+              capabilities: [gpu]
+    profiles:
+      - '' # Empty string gives default behavior (but does not run when cpu requested)
 
-  # vllm-cpu:
-  #   <<: *vllm_template
-  #   build:
-  #     context: extern/vllm
-  #     dockerfile: Dockerfile.cpu
-  #     target: vllm-openai
-  #   image: ragondin-vllm-openai-cpu
-  #   deploy: {}
-  #   profiles:
-  #     - 'cpu'
+  vllm-cpu:
+    <<: *vllm_template
+    build:
+      context: extern/vllm
+      dockerfile: Dockerfile.cpu
+      target: vllm-openai
+    image: ragondin-vllm-openai-cpu
+    deploy: {}
+    profiles:
+      - 'cpu'
