added uvicorn workers

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ JUDGE_API_KEY=
 # App
 APP_URL=localhost
 APP_PORT=8080 # this is the forwarded port
+API_NUM_WORKERS=1 # Number of uvicorn workers for the FastAPI app
 
 # VLLM
 VLLM_PORT=8007
