specify head node ip in workers

--- a/.env.example
+++ b/.env.example
@@ -98,6 +98,7 @@ SAVE_UPLOADED_FILES=true # usefull for chainlit source viewing
 # UV_LINK_MODE=copy
 # UV_CACHE_DIR=/tmp/uv-cache 
 # RAY_ADDRESS=ray://X.X.X.X:10001
+# HEAD_NODE_IP=X.X.X.X
 
 # # Chainlit UI authentication
 # CHAINLIT_AUTH_SECRET=... # has to be generated with with this command: 'uv run chainlit create-secret' but a random value works too.
